# RFID-BTS

./: AUTHORS  Makefile.common  README  configure  configure.ac
apps/: Makefile  Makefile.am  Makefile.in
config/: Makefile  Makefile.in
examples/: bts_snd_recv.py  bts_top.py  bts_transceiver.py  plot_test.py
lib/: Makefile  Makefile.am  Makefile.in  rfidbts_compare.cc  rfidbts_compare.h  rfidbts_controller.cc  rfidbts_controller.h  rfidbts_elg_timing_cc.cc  rfidbts_elg_timing_cc.h  rfidbts_gardner_timing_cc.cc  rfidbts_gardner_timing_cc.h  rfidbts_pick.cc  rfidbts_pick.h  rfidbts_pie_encoder.cc  rfidbts_pie_encoder.h  rfidbts_preamble.cc  rfidbts_preamble.h  rfidbts_preamble_det.cc  rfidbts_preamble_det.h  rfidbts_preamble_detection.cc  rfidbts_preamble_detection.h  rfidbts_receive_gate.cc  rfidbts_receive_gate.h
python/: Makefile  Makefile.am  Makefile.in  __init__.py  rfidbts_downlink.py
python/pycrc/: Makefile.am
src/lib/: Makefile.am  Makefile.swig.gen  rfidbts.i
src/lib/downlink/: Makefile.am  rfidbts_downlink.i  rfidbts_pie_encoder.cc  rfidbts_pie_encoder.h
src/python/: Makefile.am  __init__.py  bts_top.py  rfidbts_downlink.py
swig/: Makefile  Makefile.am  Makefile.in  rfidbts.i  rfidbts_compare.i  rfidbts_controller.i  rfidbts_downlink.i  rfidbts_elg_timing_cc.i  rfidbts_gardner_timing_cc.i  rfidbts_pick.i  rfidbts_preamble.i  rfidbts_preamble_det.i  rfidbts_receive_gate.i
